--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-.gradle
-/local.properties
-/.idea/libraries
-.DS_Store
-/build
-.externalNativeBuild
-
-# Built application files  //
+# Built application files
 *.apk
 *.ap_
 
@@ -41,9 +34,23 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-*.iws
 .idea/
+#.idea/workspace.xml
+#.idea/tasks.xml
+#.idea/gradle.xml
+#.idea/dictionaries
+#.idea/libraries
 
 # Keystore files
 *.jks
+
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Freeline
+freeline.py
+freeline/
+freeline_project_description.json
