--- a/base/build.gradle
+++ b/base/build.gradle
@@ -5,14 +5,10 @@ android {
     compileSdkVersion 26
 
     defaultConfig {
-//        applicationId "com.xtagwgj.base"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
@@ -22,7 +18,7 @@ android {
         }
     }
 
-    configurations.all{
+    configurations.all {
         resolutionStrategy.force 'com.android.support:design:26.1.0'
     }
 
@@ -30,12 +26,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    //对外公开
+    api "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    api 'com.android.support:appcompat-v7:26.1.0'
+    api 'com.blankj:utilcode:1.9.8'
 
-    implementation 'com.blankj:utilcode:1.9.8'
     implementation 'com.kelin.translucentbar:library:0.8.0'
 }
