--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.MainActivity">
+        <activity android:name=".user.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,6 +19,7 @@
         </activity>
 
         <activity android:name="com.xtagwgj.base.view.citylist.CityListSelectActivity"/>
+        <activity android:name=".main.MainActivity" android:label="@string/app_name"/>
     </application>
 
 </manifest>
