--- a/base/build.gradle
+++ b/base/build.gradle
@@ -20,16 +20,30 @@ android {
 
     configurations.all {
         resolutionStrategy.force 'com.android.support:design:26.1.0'
+        resolutionStrategy.force 'android.arch.lifecycle:runtime:1.0.3'
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //对外公开
     api "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    api 'com.android.support:appcompat-v7:26.1.0'
+    api ('com.android.support:design:26.1.0') {
+//        exclude module: 'support-fragment'
+        exclude module: 'animated-vector-drawable'
+        exclude group: 'android.arch.lifecycle'
+    }
     api 'com.blankj:utilcode:1.9.8'
 
-    implementation 'com.kelin.translucentbar:library:0.8.0'
+    //LiveData and ViewModel
+    api ("android.arch.lifecycle:extensions:1.0.0") {
+        exclude module: 'support-fragment'
+    }
+    api 'io.reactivex.rxjava2:rxjava:2.0.1'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
