--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    configurations.all {
+        resolutionStrategy.force 'io.reactivex.rxjava2:rxandroid:2.0.0'
+    }
 }
 
 dependencies {
@@ -30,6 +34,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':base')
+    implementation "org.jetbrains.anko:anko:$anko_version"
 
+//    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 
 }
