--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".user.LoginActivity">
+        <activity
+            android:name=".user.LoginActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,8 +20,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.xtagwgj.base.view.citylist.CityListSelectActivity"/>
-        <activity android:name=".main.MainActivity" android:label="@string/app_name"/>
+        <activity android:name="com.xtagwgj.base.view.citylist.CityListSelectActivity" />
+        <activity
+            android:name=".main.MainActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
