--- a/base/build.gradle
+++ b/base/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     api ("android.arch.lifecycle:extensions:1.0.0") {
         exclude module: 'support-fragment'
     }
-    api 'io.reactivex.rxjava2:rxjava:2.0.1'
-    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    api 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
