--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.1.60'
+    ext.anko_version='0.10.3'
+
     repositories {
         google()
         jcenter()
