--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
         <activity
             android:name=".main.MainActivity"
             android:label="@string/app_name" />
+
+        <activity
+            android:name=".main.SeekActivity"
+            android:label="SeekBar" />
+
     </application>
 
 </manifest>
